--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -115,7 +115,7 @@
                                 <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">I created Devpen.io, Markdown editor with GitHub style, for developers</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -479,17 +479,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
+                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
                                         
-                                            224 comments
+                                            172 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527972769"
+                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528510212"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     244 points
                                 </span>
@@ -503,19 +503,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
+                                    <a href="https://www.epi.org/publication/wage-theft-bigger-problem-forms-theft-workers/">Wage Theft is a Bigger Problem Than Other Forms of Theft</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216319">
                                         
-                                            172 comments
+                                            224 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510212"
+                                            href="https://news.ycombinator.com/user?id=walterbell">walterbell</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527972769"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    241 points
+                                    244 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528561804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528562405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
