--- a/jobs/index.html
+++ b/jobs/index.html
@@ -115,7 +115,7 @@
                                 <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">I created Devpen.io, Markdown editor with GitHub style, for developers</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -586,7 +586,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528561804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528562405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
