--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -115,7 +115,7 @@
                                 <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17272005" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://devpen.io">I created Devpen.io, Markdown editor with GitHub style, for developers</a>
+                                    <a href="https://devpen.io">Devpen – Markdown Editor with GitHub Style</a>
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17270258">
                                         
-                                            6 comments
+                                            7 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528561804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528562405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
