--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=cjauvin">cjauvin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528461804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    604 points
+                                    605 points
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17257239">
                                         
-                                            501 comments
+                                            502 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nwrk">nwrk</a></strong> &nbsp;•&nbsp;
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=zaksoup">zaksoup</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528494042"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    471 points
+                                    472 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=panic">panic</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528491940"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    400 points
+                                    401 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/AMA/comments/8pc8mf/im_nat_friedman_future_ceo_of_github_ama/">I’m Nat Friedman, Future CEO of GitHub. AMA</a>
+                                    <a href="http://blog.jamesdbloom.com/JVMInternals.html">JVM Internals (2013)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17258114">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271913">
                                         
-                                            202 comments
+                                            61 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hamza99">hamza99</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528392786"
+                                            href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    327 points
+                                    328 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528564205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528564804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
