--- a/jobs/index.html
+++ b/jobs/index.html
@@ -193,7 +193,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.irisonboard.com/careers/">Iris Automation Hiring Robotics Software Engineer – Autonomous Vehicles</a>
+                                    <a href="http://www.irisonboard.com/careers/">Iris Automation Hiring Robotics Software Engineer to work on Autonomous Vehicles</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -586,7 +586,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528564804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528565405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
