--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=cjauvin">cjauvin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528461804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    605 points
+                                    606 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=chewymouse">chewymouse</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528458216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    567 points
+                                    568 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=zaksoup">zaksoup</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528494042"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    472 points
+                                    474 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=panic">panic</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528491940"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    401 points
+                                    403 points
                                 </span>
                             </td>
                         </tr>
@@ -431,7 +431,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://andrewkelley.me/post/full-time-zig.html">I Quit My Job to Live on Donations</a>
+                                    <a href="https://andrewkelley.me/post/full-time-zig.html">I Quit My Job to Live on Donations to Zig</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -557,13 +557,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17271913">
                                         
-                                            61 comments
+                                            62 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    328 points
+                                    333 points
                                 </span>
                             </td>
                         </tr>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528564804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528565405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
