--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -263,7 +263,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://andrewkelley.me/post/full-time-zig.html">I Quit My Job to Live on Donations</a>
+                                    <a href="https://andrewkelley.me/post/full-time-zig.html">I Quit My Job to Live on Donations to Zig</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528564804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528565405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
