--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.eff.org/takedowns">Bogus copyright and trademark complaints: EFF’s Hall Of Shame</a>
+                                    <a href="http://semiengineering.com/fpgas-becoming-more-soc-like/#.Wxlg0Z4jrWM.facebook">FPGAs becoming more SoC-like</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254412">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271803">
                                         
-                                            21 comments
+                                            34 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=umaar">umaar</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528362905"
+                                            href="https://news.ycombinator.com/user?id=chclau">chclau</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528525257"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     91 points
                                 </span>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/jpf/dial-a-cat">Sending Cat Pictures Over The Phone</a>
+                                    <a href="https://www.eff.org/takedowns">Bogus copyright and trademark complaints: EFF’s Hall Of Shame</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271049">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254412">
                                         
-                                            9 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jf">jf</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528508513"
+                                            href="https://news.ycombinator.com/user?id=umaar">umaar</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528362905"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    90 points
+                                    91 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528566005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528566604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
