--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
+                                    <a href="https://frontendian.co/cors">Demystifying CORS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224772">
                                         
-                                            187 comments
+                                            49 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510212"
+                                            href="https://news.ycombinator.com/user?id=andRyanMiller">andRyanMiller</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528088194"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    263 points
+                                    264 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528566604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528567205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
