--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://press.princeton.edu/titles/11279.html">How Behavior Spreads: The Science of Complex Contagions</a>
+                                    <a href="https://auxo-gen.com/content/the-hardships-of-entrepreneurship-Victor-James">The Hardships of Entrepreneurship</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269408">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17272362">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lifeisstillgood">lifeisstillgood</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528489688"
+                                            href="https://news.ycombinator.com/user?id=zachmorris">zachmorris</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528540376"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    4 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528569005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528569605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
