--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528481245"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    206 points
+                                    207 points
                                 </span>
                             </td>
                         </tr>
@@ -533,13 +533,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17271963">
                                         
-                                            50 comments
+                                            51 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528529383"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    193 points
+                                    195 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/">What is code</a>
+                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17259483">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
                                         
-                                            35 comments
+                                            48 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=henridf">henridf</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528400466"
+                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     192 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528574405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528575004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
