--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
+                                    <a href="https://developer.apple.com/videos/play/wwdc2018/715/">Network.framework: A modern alternative to sockets</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265288">
                                         
-                                            70 comments
+                                            143 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528490893"
+                                            href="https://news.ycombinator.com/user?id=pjmlp">pjmlp</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528465660"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    189 points
+                                    190 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://brandur.org/graphql">Living APIs and the Case for GraphQL</a>
+                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269028">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
                                         
-                                            71 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528486847"
+                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528490893"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     189 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528577405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528578003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
