--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
+                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
                                         
-                                            58 comments
+                                            61 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528232589"
+                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    234 points
+                                    236 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528578003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528578603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
