--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
+                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
                                         
-                                            61 comments
+                                            241 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528560555"
+                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528331391"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    236 points
+                                    240 points
                                 </span>
                             </td>
                         </tr>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528529383"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    204 points
+                                    205 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528578603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528579204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
