--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://cs229.stanford.edu/proj2017/final-reports/5244039.pdf">Predicting Price Changes in Ethereum (2017) [pdf]</a>
+                                    <a href="http://semiengineering.com/fpgas-becoming-more-soc-like/#.Wxlg0Z4jrWM.facebook">FPGAs becoming more SoC-like</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17272328">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271803">
                                         
-                                            38 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528539485"
+                                            href="https://news.ycombinator.com/user?id=chclau">chclau</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528525257"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    96 points
+                                    97 points
                                 </span>
                             </td>
                         </tr>
@@ -611,11 +611,8 @@
 <div id="Bottom">
     <div class="content">
         <div class="inner">
-            <div class="sep10"></div>
-            <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528579805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528579925" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
