--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
+                                    <a href="https://webkit.org/blog/8311/intelligent-tracking-prevention-2-0/">Intelligent Tracking Prevention 2.0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17230863">
                                         
-                                            64 comments
+                                            57 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528560555"
+                                            href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528138197"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    262 points
+                                    263 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528581004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528581605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
