--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=timmytokyo">timmytokyo</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528385586"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    104 points
+                                    105 points
                                 </span>
                             </td>
                         </tr>
@@ -491,7 +491,7 @@
                                             href="https://news.ycombinator.com/user?id=ollieparanoid">ollieparanoid</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528533709"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    102 points
+                                    104 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://semiengineering.com/fpgas-becoming-more-soc-like/#.Wxlg0Z4jrWM.facebook">FPGAs becoming more SoC-like</a>
+                                    <a href="http://cs229.stanford.edu/proj2017/final-reports/5244039.pdf">Predicting Price Changes in Ethereum (2017) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271803">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17272328">
                                         
-                                            43 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=chclau">chclau</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528525257"
+                                            href="https://news.ycombinator.com/user?id=PredictorY">PredictorY</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528539485"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     98 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528582803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528583403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
