--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://semiengineering.com/fpgas-becoming-more-soc-like/#.Wxlg0Z4jrWM.facebook">FPGAs becoming more SoC-like</a>
+                                    <a href="https://www.wsj.com/articles/a-costly-deadly-obsession-with-coal-1528282800">A Costly, Deadly Obsession with Coal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271803">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17259594">
                                         
-                                            43 comments
+                                            112 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=chclau">chclau</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528525257"
+                                            href="https://news.ycombinator.com/user?id=JumpCrisscross">JumpCrisscross</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528401170"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=ohjeez">ohjeez</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528555279"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    95 points
+                                    97 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528583403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528584003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
