--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://monkeylearn.com/blog/getting-started-in-natural-language-processing-nlp/">Getting Started in Natural Language Processing</a>
+                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265593">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
                                         
-                                            36 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=wordvector">wordvector</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528467439"
+                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528490893"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     190 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528584003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528584604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
