--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-07/google-renounces-ai-for-weapons-but-will-still-sell-to-military">Google Renounces AI for Weapons, but Will Still Sell to Military</a>
+                                    <a href="https://www.chronicle.com/article/is-this-the-world-s-most/243599">Has Consciousness Lost Its Mind?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17259842">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260178">
                                         
-                                            51 comments
+                                            163 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Jerry2">Jerry2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528402692"
+                                            href="https://news.ycombinator.com/user?id=Hooke">Hooke</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528404945"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     90 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528585205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528585804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
