--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://motherboard.vice.com/amp/en_us/article/bj3pxd/signal-disappearing-messages-not-disappearing">Some Signal Disappearing Messages Are Not Disappearing</a>
+                                    <a href="https://blog.torproject.org/tor-browser-755-released">Tor Browser 7.5.5 is released –  ditches Amazon domain fronting</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271437">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17274415">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528516129"
+                                            href="https://news.ycombinator.com/user?id=jerheinze">jerheinze</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528570310"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528588805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528589403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
