--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.indiehackers.com/round-table/how-did-you-find-your-earliest-users">How to Find Your Earliest Users</a>
+                                    <a href="https://www.nasa.gov/press-release/nasa-finds-ancient-organic-material-mysterious-methane-on-mars">NASA Finds Ancient Organic Material, Mysterious Methane on Mars</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17268363">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17258492">
                                         
-                                            44 comments
+                                            100 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528482439"
+                                            href="https://news.ycombinator.com/user?id=AstralWalker">AstralWalker</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528394827"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    325 points
+                                    326 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.tomshardware.com/news/intel-28-core-cpu-5ghz,37244.html">Intel: We 'Forgot' to Mention 28-Core, 5-GHz CPU Demo Was Overclocked</a>
+                                    <a href="https://www.indiehackers.com/round-table/how-did-you-find-your-earliest-users">How to Find Your Earliest Users</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263651">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268363">
                                         
-                                            116 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528447440"
+                                            href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528482439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     325 points
                                 </span>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528478967"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    295 points
+                                    296 points
                                 </span>
                             </td>
                         </tr>
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528529383"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    231 points
+                                    232 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528592403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528593005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
